--- a/package.json
+++ b/package.json
@@ -1,19 +1,9 @@
 {
   "name": "gannbaruzoi-frontend2",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "Shim Won <marocchino@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "npm run dev",
-    "build": "node build/build.js",
-    "prettier": "prettier --single-quote --no-semi --write src/**/*.js",
-    "lint": "eslint --ext .js,.vue src",
-    "precommit": "lint-staged",
-    "prepush": "yarn test",
-    "test": "VCR_MODE=cache jest",
-    "jest": "VCR_MODE=cache jest"
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
@@ -32,36 +22,24 @@
       "vue"
     ],
     "moduleNameMapper": {
-      "isomorphic-fetch": "fetch-vcr",
       "^@/components/([^\\.]*)$": "<rootDir>/src/components/$1.vue",
       "^@/([^\\.]*)$": "<rootDir>/src/$1.js"
     },
     "mapCoverage": true,
     "cache": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js,vue}",
-      "!src/main.js",
-      "!**/node_modules/**"
-    ],
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
     ],
     "collectCoverage": false,
     "transform": {
-      "\\.graphql$": "<rootDir>/node_modules/jest-transform-graphql",
       "\\.js$": "<rootDir>/node_modules/babel-jest",
       "\\.vue$": "<rootDir>/node_modules/jest-vue-preprocessor"
     }
   },
   "dependencies": {
-    "graphql": "^0.11.7",
-    "isomorphic-fetch": "^2.2.1",
-    "uuid": "^3.1.0",
-    "vue": "^2.5.2",
-    "vuex": "^3.0.0"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
@@ -69,10 +47,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -82,40 +56,12 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "fetch-vcr": "^1.1.1",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "graphql-tag": "^2.4.2",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
-    "husky": "^0.14.3",
     "jest": "^21.2.1",
     "jest-serializer-vue": "^0.2.0",
-    "jest-transform-graphql": "^2.1.0",
     "jest-vue-preprocessor": "^1.2.0",
-    "lint-staged": "^4.2.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "prettier": "1.7.4",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vue-test-utils": "^1.0.0-beta.2",
-    "wallaby-vue-compiler": "^1.0.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "wallaby-vue-compiler": "^1.0.2"
   },
   "engines": {
     "node": ">= 8.0.0",
