--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jest-serializer-vue": "^0.2.0",
     "jest-vue-preprocessor": "^1.2.0",
     "vue-template-compiler": "^2.4.2",
+    "vue-template-es2015-compiler": "1.6.0",
     "vue-test-utils": "^1.0.0-beta.2",
     "wallaby-vue-compiler": "^1.0.2"
   },
